# d-Heap-priority-queue

./: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  PriorityQueue.h  README.md  RELEASE_NOTES_v2.0.0.md  ROADMAP.md  go.work  main.cpp
.github/workflows/: deploy-demo.yml
Cpp/: CMakeLists.txt  PriorityQueue.h  README.md  test_comprehensive.cpp  test_decrease_priority.cpp  test_instrumentation.cpp  test_unified_api.cpp
Go/: README.md  go.mod
Go/src/: comparators.go  dheap.go  dheap_test.go  doc.go  instrumentation.go  instrumentation_test.go
Rust/: CONVENTIONS.md  Cargo.toml  README.md
Rust/src/: instrumentation.rs  lib.rs  main.rs
Rust/tests/: basic.rs  comprehensive.rs  instrumentation.rs  test_decrease_priority.rs
TypeScript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
TypeScript/benchmarks/: compare-implementations.ts  identify-bottleneck.ts  run-benchmarks.ts
TypeScript/src/: PriorityQueue.ts  comparators.ts  index.ts  instrumentation.ts
TypeScript/tests/: PriorityQueue.test.ts  benchmark.test.ts
benchmarks/: README.md  graphs.toml  methodology.md
benchmarks/results/Cpp/: huge_dense_d2.jsonl  huge_dense_d2.rss.json  huge_dense_d2.stats.json  huge_dense_d4.jsonl  huge_dense_d4.rss.json  huge_dense_d4.stats.json  huge_dense_d8.jsonl  huge_dense_d8.rss.json  huge_dense_d8.stats.json  large_dense_d2.jsonl  large_dense_d2.stats.json  large_dense_d4.jsonl  large_dense_d4.stats.json  large_dense_d8.jsonl  large_dense_d8.stats.json  large_grid_d2.jsonl  large_grid_d2.stats.json  large_grid_d4.jsonl  large_grid_d4.stats.json  large_grid_d8.jsonl  large_grid_d8.stats.json  large_sparse_d2.jsonl  large_sparse_d2.stats.json  large_sparse_d4.jsonl  large_sparse_d4.stats.json  large_sparse_d8.jsonl  large_sparse_d8.stats.json  medium_dense_d2.jsonl  medium_dense_d2.stats.json  medium_dense_d4.jsonl  medium_dense_d4.stats.json  medium_dense_d8.jsonl  medium_dense_d8.stats.json  medium_grid_d2.jsonl  medium_grid_d2.stats.json  medium_grid_d4.jsonl  medium_grid_d4.stats.json  medium_grid_d8.jsonl  medium_grid_d8.stats.json  medium_sparse_d2.jsonl  (+11 more)
benchmarks/results/Go/: huge_dense_d2.jsonl  huge_dense_d2.rss.json  huge_dense_d2.stats.json  huge_dense_d4.jsonl  huge_dense_d4.rss.json  huge_dense_d4.stats.json  huge_dense_d8.jsonl  huge_dense_d8.rss.json  huge_dense_d8.stats.json  large_dense_d2.jsonl  large_dense_d2.stats.json  large_dense_d4.jsonl  large_dense_d4.stats.json  large_dense_d8.jsonl  large_dense_d8.stats.json  large_grid_d2.jsonl  large_grid_d2.stats.json  large_grid_d4.jsonl  large_grid_d4.stats.json  large_grid_d8.jsonl  large_grid_d8.stats.json  large_sparse_d2.jsonl  large_sparse_d2.stats.json  large_sparse_d4.jsonl  large_sparse_d4.stats.json  large_sparse_d8.jsonl  large_sparse_d8.stats.json  medium_dense_d2.jsonl  medium_dense_d2.stats.json  medium_dense_d4.jsonl  medium_dense_d4.stats.json  medium_dense_d8.jsonl  medium_dense_d8.stats.json  medium_grid_d2.jsonl  medium_grid_d2.stats.json  medium_grid_d4.jsonl  medium_grid_d4.stats.json  medium_grid_d8.jsonl  medium_grid_d8.stats.json  medium_sparse_d2.jsonl  (+11 more)
benchmarks/results/Rust/: huge_dense_d2.jsonl  (+50 more)
benchmarks/scripts/: env-Cpp.json  env-Go.json  env-Rust.json  env-TypeScript.json  env-Zig.json  env.ps1
benchmarks/scripts/graphgen/: Cargo.toml  README.md
benchmarks/scripts/graphgen/src/: config.rs  emit.rs  graph.rs  main.rs  verify.rs
benchmarks/scripts/graphgen/src/generators/: erdos_renyi.rs  grid.rs  mod.rs
demo/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo/src/: App.css  App.tsx  index.css
examples/dijkstra/: README.md
examples/dijkstra/Cpp/: CMakeLists.txt  README.md  dijkstra.h  graph_parser.h  main.cpp  test_graph_parser.cpp  types.h
experiment/: README.md  experimental_protocol.md  results_template.md
experiment/experiment-runner/: Cargo.toml  README.md
experiment/experiment-runner/src/: anthropic.rs  lib.rs  lmstudio.rs  main.rs  mistral.rs  provider.rs
experiment/prompts/: baseline.md  combined.md  doc_guided.md  struct_guided.md  test_guided.md  test_guided_zig_inline.md
experiment/results/: api_conformance_cpp.md  api_conformance_go.md  api_conformance_rust.md  api_conformance_typescript.md  api_conformance_zig.md  baseline_cpp_claude-sonnet-4-20250514_code.hpp  baseline_cpp_claude-sonnet-4-20250514_meta.json  baseline_cpp_claude-sonnet-4-20250514_response.md  baseline_cpp_essentialai_rnj-1_meta.json  baseline_cpp_essentialai_rnj-1_prompt.md  baseline_cpp_essentialai_rnj-1_response.md  baseline_cpp_mistral-medium-latest_code.hpp  baseline_cpp_mistral-medium-latest_meta.json  baseline_cpp_mistral-medium-latest_prompt.md  baseline_cpp_mistral-medium-latest_response.md  baseline_go_claude-sonnet-4-20250514_code.go  baseline_go_claude-sonnet-4-20250514_meta.json  baseline_go_claude-sonnet-4-20250514_prompt.md  baseline_go_claude-sonnet-4-20250514_response.md  baseline_go_essentialai_rnj-1_meta.json  baseline_go_essentialai_rnj-1_response.md  baseline_go_mistral-medium-latest_code.go  baseline_go_mistral-medium-latest_meta.json  baseline_go_mistral-medium-latest_response.md  baseline_rust_claude-sonnet-4-20250514_code.rs  baseline_rust_claude-sonnet-4-20250514_meta.json  baseline_rust_claude-sonnet-4-20250514_response.md  baseline_rust_essentialai_rnj-1_meta.json  baseline_rust_essentialai_rnj-1_prompt.md  baseline_rust_essentialai_rnj-1_response.md  baseline_rust_mistral-medium-latest_code.rs  baseline_rust_mistral-medium-latest_meta.json  baseline_rust_mistral-medium-latest_response.md  baseline_typescript_claude-sonnet-4-20250514_code.ts  baseline_typescript_claude-sonnet-4-20250514_meta.json  baseline_typescript_claude-sonnet-4-20250514_prompt.md  baseline_typescript_claude-sonnet-4-20250514_response.md  baseline_typescript_essentialai_rnj-1_code.ts  baseline_typescript_essentialai_rnj-1_meta.json  baseline_typescript_essentialai_rnj-1_prompt.md  (+196 more)
zig/: README.md  build.zig  build.zig.zon
zig/src/: d_heap.zig  instrumentation.zig  main.zig  types.zig
(+174 files in other folders)
