[package]
name = "d-ary-heap"
version = "2.6.0"
edition = "2021"
authors = ["Eric Jacopin"]
license = "Apache-2.0"
repository = "https://github.com/PCfVW/d-Heap-priority-queue"
homepage = "https://github.com/PCfVW/d-Heap-priority-queue"
readme = "README.md"
keywords = ["heap", "priority-queue", "d-ary-heap", "data-structures", "collections"]
categories = ["data-structures", "algorithms", "no-std"]
documentation = "https://docs.rs/d-ary-heap"

description = """
Generic d-ary heap priority queue supporting min/max via comparator, with O(1) item lookup for updates.
Features configurable arity, efficient priority updates, and cross-language API compatibility.
"""

[lib]
name = "d_ary_heap"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/main.rs"


[features]
default = ["std"]
std = []

# Lint floor (per Rust/CONVENTIONS.md). The crate already declares
# `#![deny(warnings)]` and `#![forbid(unsafe_code)]` at the lib root;
# this section turns on `clippy::pedantic` as a warn-group so newly
# introduced lints fire on existing CI builds. Individual lints can be
# silenced at the call site with `#[allow(clippy::lint_name)]` plus a
# justification comment — never globally.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }