[package]
name = "experiment-runner"
version = "0.1.0"
edition = "2021"
description = "Multi-provider LLM experiment runner for d-ary heap code generation research"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
