[package]
name = "graphgen"
version = "0.1.0"
edition = "2021"
publish = false
description = "Reproducible graph generator for d-ary heap Dijkstra benchmarks"

[[bin]]
name = "graphgen"
path = "src/main.rs"

[dependencies]
# Determinism-critical: a version bump in any of these may change generated graphs.
# Exact pins prevent accidental drift.
petgraph = "=0.6.5"
rand = "=0.8.5"
rand_chacha = "=0.3.1"

# Tooling: caret semver, locked via Cargo.lock.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
